[project]
name = "claude-pr-reviewer"
version = "0.6.0"
description = "CLI + GitHub Action: Claude-powered PR review with inline comments, per-file chunking, .claude-review.yml config, and on-disk review cache."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dhruv Patel", email = "dhruv17062000@gmail.com" }]
keywords = ["claude", "code-review", "pr-review", "llm", "github-actions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "unidiff>=0.7.5",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[project.scripts]
claude-pr-reviewer = "claude_pr_reviewer.cli:app"

[project.urls]
Homepage = "https://github.com/dhruvpatel1706/claude-pr-reviewer"
Issues = "https://github.com/dhruvpatel1706/claude-pr-reviewer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_pr_reviewer"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
